--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <p>LoremPraesent aliquet consectetur faucibus. Aenean gravida rutrum lorem, ac tincidunt mauris. Vivamus turpis ex,
         porttitor in posuere in, iaculis sed enim. Vestibulum at tortor ac tortor luctus dapibus iaculis et risus. Fusce
         suscipit neque et pellentesque tempus. Sed vestibulum massa nibh. Ut interdum laoreet leo eu tincidunt.</p>
+    <footer>
+        <p>This is gonna be the footer.</p>
+    </footer>
 </body>
-
 </html>
